--- a/About.html
+++ b/About.html
@@ -8,7 +8,10 @@
     <body>
 <h1>About</h1>
 <hr>
+<h2><a href="https://preview.c9users.io/aflores179/finalproject/index.html?_c9_id=livepreview0&_c9_host=https://ide.c9.io">Back to Home <a </h2>
 <br>
-<h4></h4>
+<h4>Space colonization has been largely debated in recent decades due to a combination of problems on Earth. It is being considered a possible alternative to aid in the Earth's recovery from Global Warming, Pollution, etc.  </h4>
+ <h4>However, there are arguements against space colonization, some saying that it's unethical, some saying that it is much to costly of a solution and one that requires too much time</h4>   
+ <h4>If you're interested to learn more or contribute to the conversation, visit The Debate site or our Contact Us page. We'd be happy to hear your thoughts. </h4>   
     </body>
 </html>
