--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <hr>
 <table class="three" style="width:100%" border=5>
   <tr>
-    <th><a href="https://preview.c9users.io/aflores179/finalproject/About.html?_c9_id=livepreview2&_c9_host=https://ide.c9.io">About</th>
-    <th>Background Info</th> 
-    <th>The Debate</th>
-    <th>Contact Us</th>
+    <th><a href="https://preview.c9users.io/aflores179/finalproject/About.html?_c9_id=livepreview2&_c9_host=https://ide.c9.io">About<a </th>
+    <th><a href="https://preview.c9users.io/aflores179/finalproject/BackgroundInfo.html?_c9_id=livepreview0&_c9_host=https://ide.c9.io">Background Info<a </th> 
+    <th><a href="https://preview.c9users.io/aflores179/finalproject/TheDebate.html?_c9_id=livepreview3&_c9_host=https://ide.c9.io">The Debate <a /th>
+    <th><a href="https://preview.c9users.io/aflores179/finalproject/ContactUs.html?_c9_id=livepreview4&_c9_host=https://ide.c9.io">Contact Us! <a</th>
 
 </table>
 <br><br><br><br><br><br><br>
